--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@
 src/tex/cover_page.aux
 src/tex/intro.aux
 src/.DS_Store
+.rapport_stage 2.aux.icloud
+.rapport_stage 2.fdb_latexmk.icloud
+.rapport_stage 2.fls.icloud
+.rapport_stage 2.toc.icloud
