--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ src/.DS_Store
 rapport_stage.toc
 rapport_stage 2.synctex.gz
 .rapport_stage.synctex.gz.icloud
+rapport_stage 4.synctex.gz
+rapport_stage 3.synctex.gz
