--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,15 @@ rapport_stage 2.synctex.gz
 .rapport_stage.synctex.gz.icloud
 rapport_stage 4.synctex.gz
 rapport_stage 3.synctex.gz
+src/tex/introduction_page.aux
+src/tex/environnement_page.aux
+src/tex/chapter_6.aux
+src/tex/chapter_5.aux
+src/tex/chapter_4.aux
+src/tex/chapter_3.aux
+src/tex/chapter_2.aux
+src/tex/chapter_1.aux
+rapport_stage.synctex(2).gz
+rapport_stage.synctex(1).gz
+rapport_stage 2.aux
+Intro.aux
