--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ rapport_stage.synctex(2).gz
 rapport_stage.synctex(1).gz
 rapport_stage 2.aux
 Intro.aux
+rapport_stage.synctex(4).gz
+rapport_stage.synctex(3).gz
