--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,16 @@ Intro.aux
 rapport_stage.synctex(4).gz
 rapport_stage.synctex(3).gz
 rapport_stage.synctex(5).gz
+.rapport_stage 2.pdf.icloud
+.rapport_stage 3.aux.icloud
+.rapport_stage 3.fls.icloud
+.rapport_stage 3.toc.icloud
+.rapport_stage 4.fls.icloud
+.rapport_stage 4.toc.icloud
+.rapport_stage 5.fls.icloud
+.rapport_stage 5.toc.icloud
+.rapport_stage.synctex(6).gz.icloud
+.rapport_stage.synctex(7).gz.icloud
+.rapport_stage.synctex(9).gz.icloud
+.rapport_stage.synctex(8).gz.icloud
+src/images/.DS_Store
