--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,7 @@ rapport_stage.synctex(5).gz
 .rapport_stage.synctex(9).gz.icloud
 .rapport_stage.synctex(8).gz.icloud
 src/images/.DS_Store
+.rapport_stage 4.aux.icloud
+.rapport_stage 6.toc.icloud
+.rapport_stage.synctex(10).gz.icloud
+.rapport_stage.synctex(11).gz.icloud
