--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,29 @@ src/images/.DS_Store
 .rapport_stage 6.toc.icloud
 .rapport_stage.synctex(10).gz.icloud
 .rapport_stage.synctex(11).gz.icloud
+.rapport_stage 3.fdb_latexmk.icloud
+.rapport_stage 5.aux.icloud
+.rapport_stage 5.fdb_latexmk.icloud
+.rapport_stage 6.aux.icloud
+.rapport_stage 6.fls.icloud
+.rapport_stage 7.fls.icloud
+.rapport_stage 7.toc.icloud
+.rapport_stage 8.toc.icloud
+.rapport_stage 9.toc.icloud
+.rapport_stage.fdb_latexmk.icloud
+.rapport_stage.synctex(12).gz.icloud
+.rapport_stage.synctex(13).gz.icloud
+.rapport_stage.synctex(14).gz.icloud
+.rapport_stage.synctex(16).gz.icloud
+.rapport_stage.synctex(17).gz.icloud
+.rapport_stage.synctex(18).gz.icloud
+.rapport_stage(1).toc.icloud
+rapport_stage 4.fdb_latexmk
+rapport_stage 6.fdb_latexmk
+rapport_stage 7.fdb_latexmk
+rapport_stage 8.fdb_latexmk
+rapport_stage 9.fdb_latexmk
+rapport_stage 10.fdb_latexmk
+rapport_stage.out
+src/tex/definition.aux
+src/tex/thanks.aux
