--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,16 @@ rapport_stage 10.fdb_latexmk
 rapport_stage.out
 src/tex/definition.aux
 src/tex/thanks.aux
+src/tex/chapter_3.tex
+.rapport_stage 4.fdb_latexmk.icloud
+rapport_stage 11.fdb_latexmk
+rapport_stage 12.fdb_latexmk
+rapport_stage 13.fdb_latexmk
+rapport_stage 14.fdb_latexmk
+rapport_stage 15.fdb_latexmk
+rapport_stage 16.fdb_latexmk
+rapport_stage 17.fdb_latexmk
+rapport_stage 18.fdb_latexmk
+rapport_stage 19.fdb_latexmk
+rapport_stage 20.fdb_latexmk
+src/tex/__latexindent_temp.tex
