--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,5 @@ rapport_stage 18.fdb_latexmk
 rapport_stage 19.fdb_latexmk
 rapport_stage 20.fdb_latexmk
 src/tex/__latexindent_temp.tex
+rapport_stage 2.log
+.rapport_stage 8.fls.icloud
