--- a/.gitignore
+++ b/.gitignore
@@ -98,3 +98,25 @@ rapport_stage 20.fdb_latexmk
 src/tex/__latexindent_temp.tex
 rapport_stage 2.log
 .rapport_stage 8.fls.icloud
+.rapport_stage 7.aux.icloud
+.rapport_stage 7.fdb_latexmk.icloud
+.rapport_stage 8.aux.icloud
+.rapport_stage(3).toc.icloud
+Rapport_Stage_2022.code-workspace
+.rapport_stage 9.aux.icloud
+.rapport_stage 9.fls.icloud
+.rapport_stage 10.fdb_latexmk.icloud
+.rapport_stage 10.fls.icloud
+.rapport_stage 11.fls.icloud
+.rapport_stage 11.toc.icloud
+.rapport_stage 12.toc.icloud
+.rapport_stage 14.toc.icloud
+.rapport_stage 10.toc.icloud
+.rapport_stage 13.toc.icloud
+.rapport_stage.synctex(19).gz.icloud
+.rapport_stage.synctex(20).gz.icloud
+.rapport_stage.synctex(22).gz.icloud
+.rapport_stage.synctex(21).gz.icloud
+.rapport_stage.synctex(23).gz.icloud
+.rapport_stage.synctex(24).gz.icloud
+.rapport_stage(2).toc.icloud
