--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,8 @@ Rapport_Stage_2022.code-workspace
 .rapport_stage.synctex(23).gz.icloud
 .rapport_stage.synctex(24).gz.icloud
 .rapport_stage(2).toc.icloud
+.rapport_stage 6(1).fdb_latexmk.icloud
+.rapport_stage 10.aux.icloud
+.rapport_stage 11.aux.icloud
+.rapport_stage 15.toc.icloud
+.rapport_stage 16.toc.icloud
