--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,13 @@ Rapport_Stage_2022.code-workspace
 .rapport_stage 11.aux.icloud
 .rapport_stage 15.toc.icloud
 .rapport_stage 16.toc.icloud
+.rapport_stage 12.aux.icloud
+.rapport_stage 12.fls.icloud
+.rapport_stage 13.aux.icloud
+.rapport_stage 13.fls.icloud
+.rapport_stage 17.toc.icloud
+.rapport_stage 18.toc.icloud
+.rapport_stage.synctex(25).gz.icloud
+.rapport_stage.synctex(27).gz.icloud
+.rapport_stage.synctex(28).gz.icloud
+.rapport_stage.synctex(26).gz.icloud
