--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,14 @@ Rapport_Stage_2022.code-workspace
 .rapport_stage.synctex(27).gz.icloud
 .rapport_stage.synctex(28).gz.icloud
 .rapport_stage.synctex(26).gz.icloud
+.rapport_stage 6(2).fdb_latexmk.icloud
+.rapport_stage 14.aux.icloud
+.rapport_stage 15.aux.icloud
+.rapport_stage.fls.icloud
+.rapport_stage.synctex(29).gz.icloud
+.rapport_stage.synctex(30).gz.icloud
+.rapport_stage(2).aux.icloud
+.rapport_stage(4).toc.icloud
+.rapport_stage(5).toc.icloud
+rapport_stage 21.fls
+rapport_stage.pyg
