--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,14 @@ Rapport_Stage_2022.code-workspace
 rapport_stage 21.fls
 rapport_stage.pyg
 rapport_stage 14.fls
+.rapport_stage 6(3).fdb_latexmk.icloud
+.rapport_stage 16.aux.icloud
+.rapport_stage.synctex(31).gz.icloud
+.rapport_stage 19.toc.icloud
+.rapport_stage.synctex(32).gz.icloud
+.rapport_stage.synctex(34).gz.icloud
+.rapport_stage.synctex(33).gz.icloud
+rapport_stage 16.fls
+rapport_stage 17.fls
+rapport_stage 18.fls
+rapport_stage 15.fls
