--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,5 @@ rapport_stage 16.fls
 rapport_stage 17.fls
 rapport_stage 18.fls
 rapport_stage 15.fls
+rapport_stage 20.fls
+.rapport_stage.pdf.icloud
