--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,6 @@ rapport_stage 18.fls
 rapport_stage 15.fls
 rapport_stage 20.fls
 .rapport_stage.pdf.icloud
+src/tex/.DS_Store
+.rapport_stage 2.synctex.gz.icloud
+src/tex/abstract.aux
