Add word ref to def & quick update

--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,5 @@ rapport_stage.bcf
 .rapport_stage.synctex(1).gz.icloud
 rapport_stage.run.xml
 src/tex/bibliography.aux
+.rapport_stage.synctex(3).gz.icloud
+.rapport_stage.synctex(2).gz.icloud
