--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,4 @@ rapport_stage.run.xml
 src/tex/bibliography.aux
 .rapport_stage.synctex(3).gz.icloud
 .rapport_stage.synctex(2).gz.icloud
+.rapport_stage.toc.icloud
