Quick spelling correction & up to date

--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,4 @@ src/tex/bibliography.aux
 .rapport_stage.synctex(3).gz.icloud
 .rapport_stage.synctex(2).gz.icloud
 .rapport_stage.toc.icloud
+.rapport_stage.synctex(4).gz.icloud
