--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,4 @@ src/tex/bibliography.aux
 .rapport_stage.synctex(2).gz.icloud
 .rapport_stage.toc.icloud
 .rapport_stage.synctex(4).gz.icloud
+rapport_stage.synctex(busy)
